--- a/main_page.html
+++ b/main_page.html
@@ -9,7 +9,10 @@
     <body onload="loadMainPage()">
         <header>
             <div id="black-out"></div>
-            <h1>ㄒㄩㄣˊ ㄓㄠˇ ㄕㄜˋ ㄓㄤˇ</h1>
+            <span id="header1">ㄒㄩㄣˊ</span> 
+            <span id="header2">ㄓㄠˇ</span>
+            <span id="header3">ㄕㄜˋ</span>
+            <span id="header4">ㄓㄤˇ</span>
             <div class="img-container"><img src="black_cat.png"></div>
         </header>
         <main class="main_page-main">
